# Outreach-Tool

./: .gitignore  GMAIL_SETUP_GUIDE.txt  README.md
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/db/: database.py  models.py
backend/pipeline/: research_agent.py  scraper_agent.py  sender_agent.py  writer_agent.py
backend/routers/: auth.py  bulk.py  campaigns.py  gmail.py  leads.py  outreach.py  replies.py  sent.py  settings.py  sources.py  template.py  tracking.py
backend/tools/: email_writer.py  mailer.py  reply_tracker.py  scraper.py  search.py  validator.py
backend/utils/: auth.py  error_handler.py  export.py  gmail_service.py  smtp_check.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/bulk/: page.tsx
frontend/app/dashboard/campaigns/: page.tsx
frontend/app/dashboard/gmail-setup/: page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/login/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/: BulkChecklist.tsx  CampaignLauncher.tsx  EmailCard.tsx  ErrorBoundary.tsx  Sidebar.tsx  StatsWidget.tsx  ValidationBadge.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  pagination.tsx  select.tsx  textarea.tsx
frontend/lib/: api.ts  auth.ts  cache.ts  campaign-context.tsx
(+7 files in other folders)
